solc_mutator_ossfuzz_seed_corpus/test_sol/test_32992d28821ff2c6e12cefe0411cd8f595c72297efc57105ad1be82e40581ef3_c9e9f009ce3783d0c3707a69773853f2f60e44a7_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  modifier m0(address[][] memory i0,bytes14 i1) 
  {
    {
      (i0) = (new address[][](4));
      _;
      assembly
      {
        mstore8(add(0x80, mod(i1, 2048)), 0)
        i0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
        function af0(ai0, ai1)
        {
          function af1(ai2, ai3, ai4) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11, ao12, ao13
          {
            sstore(38542758657331140250673007591786188446008867786970488850019604292289710637244, eq(delegatecall(115792089237316195423570985008687907853269984665640564039457584007913129639935, 115792089237316195423570985008687907853269984665640564039457584007913129639935, add(0x80, mod(i1, 2048)), 0, 115792089237316195423570985008687907853269984665640564039457584007913129639935, 36229814968489784780203982702896711632082564322606637678957329032861712155632), 0))
            selfdestruct(115792089237316195423570985008687907853269984665640564039457584007913129639935)
          }
          ai0 := ai0
        }
        let al0 := calldataload(mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, calldatasize()))
      }
      _;
      uint152 l0 = ((payable(address(0x0000000000000000000000000000000000000008)) != payable(address(0x0000000000000000000000000000000000000005))) ? uint152(5708990770823839524233143877797980545530986495) : (uint152(0) & uint152(1604017890091284681497275309564456923420819531)));
      _;
      int32 l1 = (int32(1429699600) - ((true ? int32(927490757) : int32(2147483647)) | int32(0)));
    }
    bytes17 l2 = bytes17(0xffffffffffffffffffffffffffffffffff);
    address payable l3 = (((int152(((int152(2854495385411919762116571938898990272765493247) | int152(0)) / int152(0))) & int152(0)) > int176(-24456559207882845855179428820678676091292882382085595)) ? payable(address(0x0000000000000000000000000000000000000005)) : payable(address(0x0000000000000000000000000000000000000001)));
    bytes28 l4 = (true ? (true ? bytes28(0x00000000000000000000000000000000000000000000000000000000) : (false ? bytes28(0x00000000000000000000000000000000000000000000000000000000) : bytes28(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffff))) : bytes28(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffff));
    bytes8 l5 = (bytes8(0x0000000000000000) | (bytes8(0x2c91ed6d3600905e) | bytes8(0x0000000000000000)));
  }
}
pragma solidity >= 0.0.0;
// ----
// DeclarationError 6578: (su0.sol:732-734): Cannot access local Solidity variables from inside an inline assembly function.
